--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Naresh Kumar HTML Template | Multi</title>
+    <title>Naresh Kumar HTML Website on the Travels</title>
 	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
                     <div class="collapse navbar-collapse navbar-right">
                         <ul class="nav navbar-nav">
                             <li class="scroll active"><a href="#home">Qualifiers</a></li>
-                            <li class="scroll"><a href="#features">Teams</a></li>
+                            <li class="scroll"><a href="#features">Logo</a></li>
                             <li class="scroll"><a href="#services">Statistics</a></li>
                             <li class="scroll"><a href="#portfolio">Destination</a></li>
                             <li class="scroll"><a href="#about">Ticketing</a></li>
