--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">About FIFA<span class="sr-only">(current)</span></a></li>
-                        <li class="scroll"><a href="#features">Development</a></li>
+                        <li class="scroll"><a href="#features">Development agency</a></li>
                         <li class="scroll"><a href="#services">Governance</a></li>
                         <li class="scroll"><a href="#portfolio">Sustainability</a></li>
                     </ul>
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-9">
-                    <h2>Latest News</h2>
+                    <h2>Latest News October 2017</h2>
                     <p>THE DAY REPLAYED An iconic Spaniard, a Dutch tornado, a Brazilian thrill machine and a Mexican warrior magnetized the spotlight heading into Matchday 12 and emphatically is how they lived up to the pressure. David Villa, in the last appearance of a glorious international career, hit his 59th and probably finest goal. Arjen Robben almost netted his personal best for the Netherlands in another exhilarating, top-spot securing performance. Neymar, carrying extraordinary expectations, bagged a brace as Brazil bounced into the knockout phase as Group A winner. And the rock that is Rafael Marquez, captaining Mexico at a fourth FIFA World Cup, scored and starred as his country progressed.</p>
                 </div>
                 <div class="col-sm-3 text-right">
